# PyMstdnCollect

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
authorisations/: auth_dict.json
collection_hashtags/: epidemics_hashtags.csv
mstdncollect/src/: daily_collection.py  daily_postcollection.py  hashtags_contexts_collection.py  utils.py  weekly_postcollection.py
mstdncollect/test/: test.py
pymstdncollect/: .coverage
pymstdncollect/src/: daily_collection.py  daily_postcollection.py  db.py  hashtags_contexts_collection.py  interactions.py  toots.py  utils.py  weekly_postcollection.py
pymstdncollect/test/: test.py
pymstdncollect/test/topiclists/: epidemics_glossary.csv  extra_kw.csv
pymstdncollect/tests/: test_1.py  test_10.py  test_11.py  test_12.py  test_13.py  test_14.py  test_2.py  test_3.py  test_4.py  test_5.py  test_6.py  test_7.py  test_8.py  test_9.py
pymstdncollect/tests/collection_hashtags/: epidemics_hashtags_upd.csv
pymstdncollect/tests/topiclists/: epidemics_glossary_kw.pickle
pymstdncollect/user_scripts/: daily_collection.py  daily_postcollection.py  hashtags_contexts_collection.py  weekly_postcollection.py
